# degine

./: .gitignore  CMakeLists.txt
degine/: DegineContext.h  Loader.h  ONNXLoader.h  degine.h
degine/ir/: Graph.h
degine/proto/: CMakeLists.txt
example/hello_world/: main.cc
